--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.js"></script> <!-- Fixed from main.js to index.js -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
